<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:background="@drawable/black">

	<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:background="@drawable/black">

		<Button
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:id="@+id/btnPlay"
				android:hint="@string/pushMeButton"
				android:textColorHint="@color/Blue"
				android:gravity="center"
				android:text="@string/play" android:textColor="@color/Yellow" android:background="@drawable/buttonmid"
				android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_alignTop="@+id/btnQuit"
				android:layout_toStartOf="@+id/btnQuit"
				android:layout_toLeftOf="@+id/btnQuit" android:clickable="true"/>
		<Button
				style="?android:attr/buttonStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/quitButton"
				android:id="@+id/btnQuit"
				android:gravity="center"
				android:textColor="@color/Red"
				android:background="@drawable/buttonmid"
				android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true" android:textStyle="bold" android:clickable="true"/>
		<TextView
				android:layout_width="200dp"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:id="@+id/txtViewR0"
				android:textColor="@color/Red"
				android:gravity="center"
				android:textSize="20sp"
				android:background="@drawable/mini"
				android:numeric="integer"
				android:hint="@string/roundnumb"
				android:layout_alignParentTop="true" android:layout_toLeftOf="@+id/btnQuit"
				android:layout_toStartOf="@+id/btnQuit" android:textStyle="bold"/>
		<TextView
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:id="@+id/txtViewR"
				android:hint="@string/number"
				android:inputType="number" android:numeric="integer"
				android:gravity="center"
				android:textSize="14sp" android:background="@drawable/mini"
				android:layout_alignParentTop="true" android:layout_alignLeft="@+id/txtView8"
				android:layout_alignStart="@+id/txtView8"
				android:layout_alignRight="@+id/btnQuit" android:layout_alignEnd="@+id/btnQuit"
				android:textColor="@color/Red" android:textStyle="bold"/>
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/Look"
				android:id="@+id/txtView000"
				android:layout_above="@+id/btnPlay" android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true" android:layout_marginLeft="21dp"
				android:layout_marginStart="21dp" android:textColor="@color/White"/>
		<GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_below="@+id/txtViewR0" android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true" android:id="@+id/start" android:layout_above="@+id/txtView000">
            <TextView
    android:id="@+id/txtView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:hint="@string/inputOne"
    android:layout_marginTop="38dp"
    android:layout_marginLeft="68dp"
    android:layout_marginStart="68dp" android:textColorHint="@color/Yellow"
    android:textColor="@color/White" android:textStyle="normal"
	android:textSize="12sp"
	android:layout_row="0" android:layout_column="0"/>
			<TextView
    android:layout_width="wrap_content"
    android:layout_height="55dp"
    android:id="@+id/txtView4"
    android:hint="@string/inputFour" android:focusableInTouchMode="true"
    android:textColorHint="@color/Yellow"
    android:textColor="@color/White" android:textStyle="normal"
	android:layout_marginTop="41dp" android:textSize="12sp"
	android:layout_row="9" android:layout_column="1"/>
			<TextView
    android:layout_width="128dp"
    android:layout_height="wrap_content"
    android:id="@+id/txtView8"
    android:hint="@string/inputEight"
    android:textColorHint="@color/Yellow" android:textColor="@color/White"
    android:textStyle="normal"
	android:layout_marginTop="41dp" android:textSize="12sp"
	android:layout_row="7" android:layout_column="0"/>
			<TextView
    android:layout_width="96dp"
    android:layout_height="wrap_content"
    android:id="@+id/txtView6"
    android:hint="@string/inputSix"
    android:textColorHint="@color/Yellow"
    android:textColor="@color/White" android:textStyle="normal"
    android:textSize="12sp"
	android:layout_marginTop="34dp" android:layout_row="2"
	android:layout_column="5"/>
			<TextView
    android:layout_width="56dp"
    android:layout_height="64dp"
    android:id="@+id/txtView3"
    android:hint="@string/inputThree"
    android:textColorHint="@color/Yellow"
    android:textColor="@color/White" android:textStyle="normal"
    android:textSize="12sp"
	android:layout_row="3" android:layout_column="2" android:layout_rowSpan="5"/>
			<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/txtView5"
    android:hint="@string/inputFive"
    android:textColorHint="@color/Yellow" android:textColor="@color/White" android:textStyle="normal"
	android:textSize="12sp" android:layout_row="6" android:layout_column="0"/>
			<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/txtView7"
    android:hint="@string/inputSeven"
    android:textColorHint="@color/Yellow"
    android:textColor="@color/White" android:textStyle="normal"
	android:layout_marginTop="27dp" android:textSize="12sp" android:layout_row="8" android:layout_column="1"/>
			<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/txtView9"
    android:hint="@string/inputNine"
    android:textColorHint="@color/Yellow" android:textColor="@color/White" android:textStyle="normal"
    android:textSize="12sp"
	android:layout_row="7" android:layout_column="1"/>
			<TextView
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:id="@+id/txtView2"
    android:hint="@string/inputTwo"
    android:layout_gravity="center_horizontal"
    android:textColorHint="@color/Yellow" android:textColor="@color/White" android:textStyle="normal"
	android:textSize="12sp" android:layout_row="9" android:layout_column="3" android:layout_columnSpan="3"/>
		</GridLayout>

	</RelativeLayout>
</LinearLayout>
