<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent" android:background="@drawable/black" android:weightSum="1">

	<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
					android:id="@+id/relative">
		<Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnMenu"
				android:textColorHint="@color/Yellow" android:gravity="center"
				android:textStyle="bold"
				android:background="@drawable/mini" android:textSize="25sp" android:textColor="@color/White"
				android:layout_alignParentBottom="true"
				android:clickable="true" android:text="@string/backbutton"
				android:layout_alignRight="@+id/txtViewT" android:layout_alignEnd="@+id/txtViewT"/>
		<Button style="?android:attr/buttonStyleSmall" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/quitButton" android:id="@+id/btnQuit"
				android:gravity="center" android:textColor="@color/Red"
				android:background="@drawable/mini" android:textStyle="bold" android:textSize="25sp"
				android:clickable="true"
				android:layout_below="@+id/btnAnswer2"
				android:layout_toRightOf="@+id/btnMenu"/>
		<TextView android:layout_width="200dp" android:layout_height="wrap_content"
				  android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/txtViewR"
				  android:hint="@string/number" android:inputType="number"
				  android:numeric="integer" android:gravity="center"
				  android:textColor="@color/Red"
				  android:textIsSelectable="false" android:textSize="16sp"
				  android:background="@drawable/mini"
				  android:layout_alignParentTop="false"
				  android:layout_toLeftOf="@+id/txtPoints"
				  android:layout_alignBottom="@+id/txtPoints" android:textStyle="bold"/>
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/picked"
				android:id="@+id/txtViewT"
				android:textStyle="bold" android:textSize="25sp"
				android:textColor="@color/White"
				android:textColorHighlight="@color/White"
				android:layout_above="@+id/btnAnswer1" android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"/>
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/btnAnswer1"
				android:hint="@string/answer1"
				android:textSize="12sp"
				android:textColorHint="@color/Yellow"
				android:textColor="@color/White"
				android:focusable="false" android:clickable="true" android:layout_above="@+id/btnMenu"
				android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/btnAnswer2"
				android:hint="@string/answer2"
				android:textSize="12sp"
				android:textColorHint="@color/Yellow"
				android:textColor="@color/White"
				android:clickable="true"
				android:layout_marginStart="37dp" android:layout_below="@+id/txtViewT"
				android:layout_toRightOf="@+id/btnAnswer3" android:layout_toEndOf="@+id/btnAnswer3"
				android:layout_marginLeft="37dp"/>
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/btnAnswer3"
				android:hint="@string/answer3"
				android:textSize="12sp"
				android:textColorHint="@color/Yellow"
				android:textColor="@color/White"
				android:clickable="true"
				android:layout_marginLeft="43dp"
				android:layout_marginStart="43dp" android:layout_below="@+id/txtViewT"
				android:layout_toRightOf="@+id/btnAnswer1" android:layout_toEndOf="@+id/btnAnswer1"/>
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/txtPoints"
				android:textColor="@color/Red" android:textSize="14sp"
				android:numeric="integer" android:inputType="number"
				android:gravity="center" android:hint="@string/p"
				android:textIsSelectable="false" android:background="@drawable/mini"
				android:layout_alignParentTop="true" android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true" android:layout_toRightOf="@+id/txtViewT"
				android:layout_toEndOf="@+id/txtViewT" android:textStyle="bold"/>
		<GridLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical" android:layout_above="@+id/txtViewT"
				android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
				android:layout_below="@+id/txtViewR" android:id="@+id/gridLayout">
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtView6"
                      android:hint="@string/inputFive"
                      android:textColor="@color/White"
                      android:textColorHint="@color/Yellow"
                      android:textSize="12sp"
					  android:textColorHighlight="@color/White" android:layout_row="0" android:layout_column="6"/>
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtView9"
                      android:hint="@string/inputEight"
                      android:textColor="@color/White"
                      android:textColorHighlight="@color/White" android:textColorHint="@color/Yellow"
					  android:layout_marginTop="27dp" android:textSize="12sp"
					  android:layout_row="2" android:layout_column="6"/>
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtView3"
                      android:hint="@string/inputTwo" android:layout_gravity="center_horizontal"
                      android:textColor="@color/White" android:textColorHighlight="@color/White"
                      android:textColorHint="@color/Yellow" android:textSize="12sp"
					  android:layout_marginRight="33dp"
                      android:layout_marginEnd="33dp" android:layout_row="4" android:layout_column="4"/>
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtView4"
                      android:hint="@string/inputThree"
                      android:textColor="@color/White" android:textColorHighlight="@color/White"
                      android:textColorHint="@color/Yellow"
                      android:textSize="12sp"
					  android:layout_row="5" android:layout_column="3"/>
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtView1"
                      android:hint="@string/inputNine"
                      android:textColor="@color/White"
                      android:textColorHighlight="@color/White" android:textColorHint="@color/Yellow"
                      android:textSize="12sp"
					  android:layout_row="2" android:layout_column="4"/>
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtView5"
                      android:hint="@string/inputFour" android:focusableInTouchMode="true"
                      android:textColor="@color/White"
                      android:textColorHint="@color/Yellow"
                      android:textSize="12sp"
                      android:textColorHighlight="@color/White"
					  android:layout_marginRight="23dp"
                      android:layout_marginEnd="23dp" android:layout_row="7" android:layout_column="3"/>
			<TextView android:id="@+id/txtView2" android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:hint="@string/inputOne" android:layout_marginTop="74dp"
                      android:textColor="@color/White"
                      android:textColorHighlight="@color/White" android:textColorHint="@color/Yellow"
                      android:textSize="12sp"
					  android:layout_row="6" android:layout_column="4" android:layout_columnSpan="2"/>
			<TextView android:layout_width="170dp" android:layout_height="wrap_content" android:id="@+id/txtView8"
                      android:hint="@string/inputSeven"
                      android:textColor="@color/White"
                      android:textColorHint="@color/Yellow"
                      android:textSize="12sp"
					  android:layout_marginTop="62dp" android:layout_row="5" android:layout_column="7"/>
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtView7"
                      android:hint="@string/inputSix"
                      android:textColor="@color/White"
                      android:textColorHint="@color/Yellow"
                      android:textSize="12sp"
					  android:layout_row="7" android:layout_column="6"/>
		</GridLayout>
	</RelativeLayout>
</LinearLayout>